# tokenops-wiki

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.examples.yml  docker-compose.triad.yml  pyproject.toml  requirements.txt  run.py  run_triad.py
benchmarking/: README.md  __init__.py  run_all.py  run_trials_sweep.py
benchmarking/browseruse/: .trajectory_bench.db  .trajectory_bench_books.db  README.md  configs.py  governed_llm.py  governed_tools.py  integration.py  run_live_benchmark.py  run_trajectory_hint_bench.py  scenarios_live.py  session.py  setup_live.sh
benchmarking/common/: __init__.py  configs.py  harness.py  live_pricing.py  pricing.py  trial.py
benchmarking/metagpt/: README.md  __init__.py  action_context.py  bench_role.py  bootstrap.py  configs.py  crossing.py  evaluate.py  governed_actions.py  governed_llm.py  integration.py  run_live_benchmark.py  scenario_expectations.py  scenarios_live.py  (+2 more)
docs/: TokenOps - deck.pptx  comparison.md  contact.md  customer-outcomes.md  demo-bench.md  field-guide-add-tokenops.md  policies-and-actions.md  principles.md  shared-ledger.md  workflow.md
examples/: README.md  __init__.py  app_config.py
scripts/: capture_demo_media.py  db_clear.py  db_reseed.py  generate_benchmark_table_png.py  generate_demo_assets.py  prep_ledger_comparison.py  render_agent_pinboard_diagram_png.py  render_benchmark_9_runs_png.py  render_field_guide_snippets.py  test_demo_scenarios.py
tests/: test_browseruse_suites.py  test_metagpt_integration.py  test_metagpt_live_scenarios.py  test_trial_status.py  test_trials_sweep.py
(+81 files in other folders)
