[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenops-examples"
version = "0.1.0"
description = "Runnable TokenOps examples (A2A benches) and benchmarking — see theagentplane/tokenops for the core library"
readme = "examples/README.md"
requires-python = ">=3.10"
dependencies = [
  "tokenops @ git+https://github.com/theagentplane/tokenops.git",
  "openai>=1.0",
  "anthropic>=0.40",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "streamlit>=1.30",
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "ddgs>=9.0",
]

[project.optional-dependencies]
langchain = [
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "langchain-anthropic>=0.2",
]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["examples*", "benchmarking*"]
exclude = ["benchmarking.browseruse.vendor*"]
